# fm-assistant

./: .gitignore  Makefile  README.md  default.nix  fm-assistant.cabal  package.yaml  shell.nix
data/test/: Dummy kit pack v1.0.rar  Dummy kit pack v1.1.rar  Malformed dummy kit pack v1.0.rar  damaged-test.rar  test.tar  test_zip
fm-assistant/: CutoutFaces.hs  CutoutFacesIcons.hs  CutoutFacesMegapack.hs  CutoutMegapack.hs  DebskisHairstyles.hs  KitPack.hs  Main.hs  MainCmd.hs  MetallicLogos.hs  Mod.hs  RealNamesFix.hs  RealNamesFix16.hs  Repack.hs  RepackMultiple.hs  Skin.hs  Trophies.hs  Util.hs
nix/jobsets/: default.nix  release.nix  spec.json  testing.nix
nix/overlays/: haskell-overrides.nix  lib.nix
nix/pkgs/: fm-assistant.nix
src/Game/: FMAssistant.hs
src/Game/FMAssistant/: Actions.hs  FM16.hs  Install.hs  Internal.hs  Magic.hs  Mod.hs  Repack.hs  Streaming.hs  Types.hs  Unpack.hs  Util.hs  Version.hs
src/Game/FMAssistant/Mod/: Faces.hs  Kits.hs
src/Game/FMAssistant/Repack/: DebskisHairstyles.hs  Faces.hs  Internal.hs  Kits.hs  MetallicLogos.hs  RealNamesFix.hs  RealNamesFix16.hs  RealNamesFix17.hs  RealNamesFix18.hs  Skins.hs  Trophies.hs  Unpack.hs
test/: doctests.hs  hlint.hs
test/Game/: FMAssistantSpec.hs
test/Game/FMAssistant/: FM16Spec.hs  InstallSpec.hs  MagicSpec.hs  RepackSpec.hs  TypesSpec.hs  UnpackSpec.hs  UtilSpec.hs  VersionSpec.hs
test/Game/FMAssistant/Mod/: KitsSpec.hs  ModInstallSpec.hs
test/Game/FMAssistant/Repack/: KitsSpec.hs  UnpackSpec.hs
