Name:                   fm-assistant
Version:                0.0.0
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Data-Files:             data/test/*.rar
                      , data/test/*.zip
                      , data/test/*.tar

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Game.FMAssistant
                      , Game.FMAssistant.FM16
                      , Game.FMAssistant.Magic
                      , Game.FMAssistant.Mod.Kits
                      , Game.FMAssistant.Streaming
                      , Game.FMAssistant.Types
                      , Game.FMAssistant.Unpack
                      , Game.FMAssistant.Util
  Build-Depends:        base >= 4 && < 5
                      , bytestring
                      , containers
                      , directory
                      , exceptions
                      , filepath
                      , foldl
                      , mtl
                      , process-streaming
                      , resourcet
                      , streaming
                      , streaming-bytestring
                      , system-filepath
                      , tar
                      , temporary
                      , text
                      , turtle
                      , transformers

Executable fm-assistant
  Main-Is:              Main.hs
  Default-Language:     Haskell2010
  HS-Source-Dirs:       fm-assistant
                      , src
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5
                      , bytestring
                      , containers
                      , directory
                      , exceptions
                      , filepath
                      , foldl
                      , mtl
                      , optparse-applicative >= 0.11.0
                      , process-streaming
                      , resourcet
                      , streaming
                      , streaming-bytestring
                      , system-filepath
                      , tar
                      , temporary
                      , text
                      , turtle
                      , transformers
  Other-Modules:        Game.FMAssistant
                      , Game.FMAssistant.FM16
                      , Game.FMAssistant.Magic
                      , Game.FMAssistant.Mod.Kits
                      , Game.FMAssistant.Streaming
                      , Game.FMAssistant.Types
                      , Game.FMAssistant.Unpack
                      , Game.FMAssistant.Util
                      , KitPack
                      , Util

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall -threaded
  Main-Is:              doctests.hs
  Build-Depends:        base
                      , doctest

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , bytestring
                      , containers
                      , directory
                      , exceptions
                      , filepath
                      , foldl
                      , hspec
                      , mtl
                      , process-streaming
                      , resourcet
                      , streaming
                      , streaming-bytestring
                      , system-filepath
                      , tar
                      , temporary
                      , text
                      , turtle
                      , transformers
  Other-Modules:        Game.FMAssistant
                      , Game.FMAssistant.FM16
                      , Game.FMAssistant.Magic
                      , Game.FMAssistant.Mod.Kits
                      , Game.FMAssistant.Streaming
                      , Game.FMAssistant.Types
                      , Game.FMAssistant.Unpack
                      , Game.FMAssistant.Util
                      , Paths_fm_assistant

Source-Repository head
  Type:                 git
--  Location:             
