Name:                   fm-assistant
Version:                0.0.0
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Data-Files:             data/test/*.rar
                      , data/test/*.zip
                      , data/test/*.tar

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Game.FMAssistant
                      , Game.FMAssistant.Install
                      , Game.FMAssistant.Magic
                      , Game.FMAssistant.Mod
                      , Game.FMAssistant.Repack
                      , Game.FMAssistant.Repack.Faces
                      , Game.FMAssistant.Repack.Internal
                      , Game.FMAssistant.Repack.Kits
                      , Game.FMAssistant.Repack.Unpack
                      , Game.FMAssistant.Streaming
                      , Game.FMAssistant.Types
                      , Game.FMAssistant.Util
  Build-Depends:        base >= 4 && < 5
                      , bytestring
                      , cond
                      , containers
                      , directory
                      , exceptions
                      , filepath
                      , foldl
                      , lens
                      , lzma
                      , mtl
                      , path
                      , path-io
                      , process-streaming
                      , resourcet
                      , streaming
                      , streaming-bytestring
                      , system-filepath
                      , tar
                      , template-haskell
                      , temporary
                      , text
                      , time
                      , transformers

Executable fm-assistant
  Main-Is:              Main.hs
  Default-Language:     Haskell2010
  HS-Source-Dirs:       fm-assistant
                      , src
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5
                      , bytestring
                      , cond
                      , containers
                      , directory
                      , exceptions
                      , filepath
                      , foldl
                      , lens
                      , lzma
                      , mtl
                      , optparse-applicative >= 0.11.0
                      , path
                      , path-io
                      , process-streaming
                      , resourcet
                      , streaming
                      , streaming-bytestring
                      , system-filepath
                      , tar
                      , template-haskell
                      , temporary
                      , text
                      , time
                      , transformers
  Other-Modules:        Game.FMAssistant
                      , Game.FMAssistant.Install
                      , Game.FMAssistant.Magic
                      , Game.FMAssistant.Mod
                      , Game.FMAssistant.Repack
                      , Game.FMAssistant.Repack.Faces
                      , Game.FMAssistant.Repack.Internal
                      , Game.FMAssistant.Repack.Kits
                      , Game.FMAssistant.Repack.Unpack
                      , Game.FMAssistant.Streaming
                      , Game.FMAssistant.Types
                      , Game.FMAssistant.Util
                      , CutoutFacesMegapack
                      , CutoutFacesIcons
                      , KitPack
                      , Mod
                      , Util

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall -threaded
  Main-Is:              doctests.hs
  Build-Depends:        base
                      , doctest
                      , filepath

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , bytestring
                      , cond
                      , containers
                      , directory
                      , exceptions
                      , filepath
                      , foldl
                      , hspec
                      , lens
                      , lzma
                      , mtl
                      , path
                      , path-io
                      , process-streaming
                      , resourcet
                      , streaming
                      , streaming-bytestring
                      , system-filepath
                      , tar
                      , template-haskell
                      , temporary
                      , text
                      , time
                      , transformers
  Other-Modules:        Game.FMAssistant
                      , Game.FMAssistant.Install
                      , Game.FMAssistant.Magic
                      , Game.FMAssistant.Mod
                      , Game.FMAssistant.Repack
                      , Game.FMAssistant.Repack.Faces
                      , Game.FMAssistant.Repack.Internal
                      , Game.FMAssistant.Repack.Kits
                      , Game.FMAssistant.Repack.Unpack
                      , Game.FMAssistant.Streaming
                      , Game.FMAssistant.Types
                      , Game.FMAssistant.Util
                      , Paths_fm_assistant

Source-Repository head
  Type:                 git
--  Location:             
